public/stylesheets/style.css
/* font stylings */

@font-face {
  src: url(../font/Aspal.ttf);
  font-family: 'aspal';
}

p {
  font-family: 'Quicksand', sans-serif;
}

h2 {
  font-weight: bold;
  color: #BFF0CF;
  font-family: 'aspal';
  font-size: 45px;
}

/* Background Image */

body {
  background: url(../img/mountain.jpg);
  background-position: center;
  background-size: cover;
  background-size: auto;
  width: 100%;
  height: 100%;
}

/* Navigation */

nav, ul.navbar-nav {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  background-color: #3A5772;
}

/* Icon */

div.navbar-brand {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

img.logo {
  width: 100px;
}

h1 {
  color: #BFF0CF;
  font-size: 30px;
  font-family: 'aspal';
  font-weight: bold;
}

span.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  color: white;
}

#menuList {
  justify-content: flex-end;
  text-align: right;
}

li.nav-item>a.info-link {
  padding: 1rem;
}

a.nav-link {
  color: white;
  font-family: 'Quicksand', sans-serif;
  font-size: 20px;
  margin-left: 10px;
}

a.nav-link:hover {
  color: #BFF0CF;
}

/* footer nav */

div.footer {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  color: white;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

footer {
  width: 100%;
  background-color: #87A2BB;
  padding-left: 0;
  padding-right: 0;
}

i.foot-icon {
  font-size: 30px;
  color: white;
}

footer {
  margin-top: 1rem;
}

/* End Navigation */

.main-content, .start-content {
  display: flex;
  width: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 2rem;
}

/* ----- general btn stylings ----- */

button.sober-btn, button.login-btn, button.article-btn {
  border-radius: 3px;
  height: 60px;
  background-color: #87A2BB;
  width: 65%;
  font-size: 20px;
  transition-duration: 0.5s;
  margin-top: 20px;
}

/* ---- Start Page ---- */

h4.startPage {
  font-size: 30px;
  margin-bottom: 30px;
}

.start-btn {
  width: 80%;
}

.start-btns {
  margin-bottom: 1rem;
}

a.about-tag {
  color: white;
  font-size: 24px;
  font-weight: 600px;
  padding-top: 2rem;
}

a.about-tag:hover {
  color: #BFF0CF;
}

/* ---- About Us & info ----- */

p.about-info {
  text-align: left;
}

i.info {
  font-size: 30px;
  padding: 5px;
}

label.info {
  display: flex;
  flex-direction: row;
  align-items: center;
}

img.info {
  width: 10vw;
  margin: .5rem;
}

/* ---- Register Stylings ---- */

h2.signupTitle {
  margin-bottom: 1rem;
}

label.inputLabel {
  font-size: 18px;
  margin: 5px;
  text-align: left;
}

/* ---- Login Stylings ---- */

/* back arrow */

button.back {
  font-size: 25px;
  text-align: left;
  color: #3A5772;
  width: 25px;
  height: 25px;
  background-color: transparent;
  border: transparent;
}

img.signin-logo {
  text-align: center;
  width: 200px;
  margin-bottom: 30px;
}

h2.login-title {
  margin-bottom: 48px;
}

button.login-btn:hover {
  background-color: #3A5772;
  color: white;
}

label.checkbox {
  text-align: left;
}

/* Welcome Header */

h2.user-name {
  margin-top: 2rem;
}

/* Containers */

div.box {
  background-color: rgba(58, 87, 114, 0.5);
  text-align: center;
  width: 500px;
  width: 90vw;
  margin-top: 2rem;
  max-width: 700px;
  border-radius: 8px;
  margin-bottom: 2rem;
  padding: 32px;
  display: flex;
  flex-direction: column;
}

div.login-container, div.signupJumbo {
  width: 500px;
}

/* ---- Check in ---- */

h2.welcome-title, h2.resources-title, span.member-name, h2.reflections-title {
  font-family: 'Quicksand', sans-serif;
  margin-top: 2rem;
  color: #3A5772;
  text-align: center;
}

span.member-name {
  margin: 0;
}

#soberYN {
  width: 20px;
  height: 20px;
}

/* mood title */

h4, label.checkin-title, a.foot-icon, h5 {
  color: white;
  font-family: 'Quicksand', sans-serif;
}

/* mood button styling */

div.mood-buttons {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: center;
}

.mood-sober {
  align-items: center;
  justify-content: space-around;
  color: white;
}

p {
  margin-left: 12px;
  color: #3A5772;
}

button.mood {
  width: 3rem;
  border: 3px solid white;
  border-radius: 100px;
  color: white;
  font-size: 20px;
  transition-duration: 0.5s;
  margin-left: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

button.mood:hover, button.sober-btn:hover, button.article-btn:hover, button.btn:focus, button.active, .feelingNum {
  background-color: #BFF0CF;
  border: 3px solid #3A5772;
  color: #3A5772;
}

button.mood:hover, .feelingNum {
  font-size: 35px;
  height: 3rem;
}

label.checkin-title {
  text-align: left;
  font-size: 22px;
}

textarea {
  font-size: 14px;
}

div.checkin-box {
  margin-top: 0rem;
  margin-bottom: 5rem;
}

#check-in-text {
  height: 4rem;
}

input[type=text], input[type=password], input[type=date], textarea {
  width: 100%;
  margin-bottom: 14px;
  padding: 16px;
  background-color: #ecf2f4;
  border: none;
  color: rgb(0, 0, 0);
}

label {
  color: #fff;
  width: 100%;
}

input[type=checkbox] {
  height: 17px;
  width: 17px;
}

label[for="soberYN"], label[for="remember"] {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

input[type="checkbox"] {
  margin-right: 5px;
}

/* ---- Resources & Journal ---- */

div.card {
  margin: 2rem;
}

div.journal-box, div.resource-box {
  display: flex;
  flex-wrap: wrap;
  max-width: 800px;
}

div.resource-box {
  flex-direction: row;
  flex-wrap: wrap-reverse;
}

div.journal-box {
  flex-direction: column-reverse;
}

div.journal-entry, div.resource-article {
  max-width: 375px;
  min-height: 225px;
  background-color: rgb(58, 87, 114, 0.5);
  display: flex;
  flex-direction: column;
  align-items: center;
}

div.resource-article {
  width: 300px;
  align-items: center;
}

.article-title {
  min-height: 3rem;
  padding-top: 20px;
  padding-bottom: 5px;
  border-bottom: 2px solid whitesmoke;
}

p.journal-entry {
  margin: 1rem;
}

/* title */

h2.resources-title {
  margin-bottom: 0px;
}

article {
  /* border: 2px solid white; */
  border-radius: 10px;
  margin: 20px;
  padding: 10px;
}

/* article description */

p, span.date {
  color: white;
  font-size: 15px;
}

/* article button */

.article-btn {
  margin-top: 5px;
}

/* ---- Counter Stylings ---- */

/* Top of the page */

/* The counter with chart */

#counter {
  max-width: 450px;
  margin: 35px auto;
  opacity: 0.9;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  position: relative;
  justify-content: center;
  align-items: center;
}

#responsive-chart, div.chart-inner {
  grid-column: 2/span 10;
  grid-row: 1;
  z-index: 2;
}

#mtn-img {
  grid-column: 4/span 6;
  grid-row: 1;
  width: 100%;
  z-index: 1;
}

/* For the overlay behind the mtn image */

div.chart-inner {
  grid-column: 3/span 8;
  grid-row: 1;
  background-color: #3a5772;
  height: 90%;
  z-index: 0;
  margin: 15px;
}

/* for the days sober */

p.days-sober {
  grid-column: 6/span 2;
  grid-row: 1;
  z-index: 3;
  margin-top: 250%;
  font-size: calc(12px + .8vw);
  color: #f2e165;
}

/* For the Badges (1 day, 5 day, etc) */

div.info-box {
  background-color: rgba(58, 87, 114, 0.95);
}

div.outer-stars, div.badges {
  padding: 5px 10px;
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
}

/* Outer container for the row of badges */

div.badges {
  padding: 0;
  max-width: 65%;
  justify-content: space-around;
}

div.badges-col {
  display: flex;
  justify-content: center;
  padding-right: 5px;
  padding-left: 5px;
}

img.earned-badge {
  max-width: calc(35px + 4.2vw);
}

label.infoBadge {
  display: flex;
  flex-direction: column;
  align-items: center;
}

img.about {
  display: flex;
  max-width: calc(5vw);
}

/*  For days/etc until next badge */

div.days-until {
  background-color: #3a5772c0;
  /* background-color: #3a57729c; */
  width: 65%;
  max-width: 500px;
  border-radius: 10px;
  margin-top: 60px;
  margin-bottom: 60px;
}

div.stars-container {
  font-size: 20px;
  text-align: center;
  /* text-shadow:
    -1px -1px 0 #D5CCC0,
    1px -1px 0 #D5CCC0,
    -1px 1px 0 #D5CCC0,
    1px 1px 0 #D5CCC0; */
}

p.total-Days-label {
  text-align: left;
}

.year-star {
  padding: 2px;
  color: #cc7272;
}

.month-star {
  padding: 2px;
  color: #fff;
}

.week-star {
  padding: 2px;
  color: #BFF0CF;
  /* color: #89d6a1; */
}

.day-star {
  padding: 2px;
  color: #f2e165;
}

/* May not end up needing this */

div.days-until p {
  /* color: white; */
  margin: .25rem 0;
  font-size: calc(14px + .7vw);
  width: 100%;
}

/* May not end up needing this */

span#time-left {
  color: #BFF0CF;
}

/* May not need this */

span.star {
  color: yellow;
  font-size: calc(16px + .7vw);
  margin-left: 10px;
}

/* Quote box */

div.quote-container {
  color: white;
  background-color: #bff0cf9c;
  width: 65%;
  max-width: 500px;
  border-radius: 10px;
  margin-bottom: 5rem;
  padding: 1rem;
}

div.quote-container>p {
  color: white;
  font-size: calc(14px + .6vw);
}

p.quote {
  font-style: italic;
}

p.quote-author {
  text-align: right;
}

/* -------------------------------------- */

/* API Submit Quote Page */

a.submit-link {
  color: #617b92;
  font-family: 'Quicksand', sans-serif;
}

a.submit-link:hover {
  text-decoration: none;
  font-weight: 500;
  color: #bce6c9;
}

div.submit-box {
  max-width: 500px;
}

label>span.submit-optional-span {
  color: #c1c1c1;
  font-size: smaller;
}

/* end API Submit Quote Page */

/* -------------------------------------- */

/* media queries */

@media screen and (min-width: 300px) and (max-width: 700px) {
  div.days-until {
    margin-top: 30px;
    margin-bottom: 30px;
  }
  div.box {
    width: 100%;
    margin: 0;
    border-radius: 0px;
  }
  img.signin-logo {
    width: 40vw;
  }
  .start-content {
    padding-bottom: 0rem;
  }
  h2.welcome-title {
    margin: 1rem;
  }
  div.mood-box {
    padding-bottom: 0;
  }
  div.checkin-box {
    margin-bottom: 2rem;
  }
}

@media screen and (min-width: 600px) {
  div.days-until, div.quote-container, div.badges {
    width: 50%;
  }
  div.info-box {
    margin-top: 2rem;
  }
}

@media screen and (min-width: 1000px) {
  footer {
    visibility: hidden;
  }
}

@media screen and (max-width: 1000px) {
  .navbar-toggler, .navbar-collapse {
    visibility: hidden;
  }
  nav.navbar {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  div.navbar-brand {
    margin-right: 0;
  }
}

@media only screen and (min-device-width: 280px) and (max-device-width: 500px) and (-webkit-min-device-pixel-ratio: 2) {
  h2 {
    /* margin-top: 10px; */
    font-size: 10vw;
  }
  .box {
    width: 100%;
  }
  input[type=text] {
    margin-bottom: 10px;
    font-size: 14px;
    padding-bottom: 20px;
  }
  .btn {
    height: 45px;
    font-size: 18px;
  }
}

